Enhances client portfolio report generation
Refactors the client portfolio report generation endpoint to provide more detailed filtering and reporting capabilities.

This includes:
- Adding support for filtering by account type and state.
- Implementing pagination for large datasets.
- Improving API documentation with detailed descriptions, examples, and schema definitions.
- Adding input validation for request parameters.
- Improving error handling and logging for better debugging and monitoring.